--- a/css/styles.scss
+++ b/css/styles.scss
@@ -129,6 +129,10 @@ button,
   color: $teal;
   font-weight: bold;
 }
+.note {
+  font-style: italic;
+  font-size: .875em !important;
+}
 .nobreak {
   white-space: nowrap;
 }
