using video instead of gif

--- a/css/_cases.scss
+++ b/css/_cases.scss
@@ -17,10 +17,9 @@
     img {
       @extend %img;
     }
-    .gif {
-      img {
-        margin-bottom: 2em;
-      }
+    video {
+      @extend %img;
+      margin-bottom: 2em;
     }
   }
   article {
