--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,7 @@ header {
         text-align: left; } }
 
 /* ===== case study ===== */
-.case .overview img, .case .banner img {
+.case .overview img, .case .banner img, .case .banner video {
   height: auto;
   max-width: 1000px;
   width: 100%; }
@@ -351,7 +351,7 @@ header {
     margin: 0 auto 5em; }
   .case .banner {
     margin: 0 auto; }
-    .case .banner .gif img {
+    .case .banner video {
       margin-bottom: 2em; }
   .case article {
     margin-top: 5em; }
