--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -41,8 +41,11 @@ footer {
     &:hover, &:active, &:focus {
       border-color: transparent;
     }
-    img {
-      margin-right: 1em;
+    .fa-stack {
+      margin-right: .5em;
+      &-1x {
+        color: $red;
+      }
     }
   }
   form {
