--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -11,6 +11,9 @@
     &half {
       flex: 0 1 47%;
     }
+    &twothirds {
+      flex: 0 1 63%;
+    }
     &full {
       flex: 0 1 100%;
     }
