if I wanted a lightbox?

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -163,6 +163,6 @@ img + .note {
 @import "about";
 @import "footer";
 @import "animate";
-
+@import "lightbox";
 
 /* == Do not mistake temptation for opportunity. == */
