--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,20 @@ textarea:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px #F9F9F9 inset !important;
   box-shadow: 0 0 0px 1000px #F9F9F9 inset !important; }
 
+#scrollTop {
+  background-color: #037569;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(102, 102, 102, 0.5);
+  bottom: .5em;
+  color: #FFF;
+  cursor: pointer;
+  display: none;
+  font-size: 1.5em;
+  line-height: .75em;
+  padding: .75em;
+  position: fixed;
+  right: 1em; }
+
 /* ===== animation ===== */
 .progressive {
   overflow: hidden;
