--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,12 @@ p {
   font-size: 1em;
   line-height: 1.25;
   margin-bottom: 1.5em; }
+  p.small {
+    font-size: .75em;
+    line-height: 1em; }
+  p.large {
+    font-size: 1.25em;
+    line-height: 1.5em; }
 
 a {
   border-bottom: 1px dotted transparent;
@@ -165,6 +171,18 @@ img + .note {
   @media (min-width: 60em) {
     .l-show {
       display: inline-block; } }
+
+.no-flex header > div {
+  display: block; }
+  .no-flex header > div h1 {
+    display: inline-block; }
+  .no-flex header > div .mobile-nav {
+    float: right; }
+  .no-flex header > div nav {
+    text-align: right; }
+
+.no-flex footer .social a {
+  display: block; }
 
 /* ===== grid ===== */
 .grid {
