--- a/css/styles.css
+++ b/css/styles.css
@@ -199,19 +199,19 @@ img + .note, video + .note {
 .update footer .social a {
   display: block; }
 
-aside {
+aside.borders {
   border-top: 4px double #666;
   border-bottom: 4px double #666;
   margin-top: 4em;
   text-align: center;
   width: 100%; }
-  aside a {
+  aside.borders a {
     color: #666;
     transition: color 500ms; }
-    aside a h5 {
+    aside.borders a h5 {
       padding: .25em;
       margin: 1em; }
-    aside a:hover, aside a:focus, aside a:active {
+    aside.borders a:hover, aside.borders a:focus, aside.borders a:active {
       color: #F02E11;
       transition: color 500ms; }
 
