--- a/css/styles.scss
+++ b/css/styles.scss
@@ -211,7 +211,7 @@ img, video {
 }
 
 // aside
-aside {
+aside.borders {
   border-top: 4px double $dark-grey;
   border-bottom: 4px double $dark-grey;
   margin-top: 4em;
