--- a/css/_animate.scss
+++ b/css/_animate.scss
@@ -37,6 +37,23 @@
     }
   }
 }
+
+.slide_up {
+  animation: 1s ease-out 0s 1 fadeAndSlideUp;
+  // duration timing-function delay iteration name
+  }
+
+@keyframes fadeAndSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(15%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 #content {
   opacity: 0;
   transition: opacity .7s ease-in;
