--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -148,7 +148,7 @@ textarea:-webkit-autofill {
   ), webkit);
 }
 #scrollTop {
-  background-color: $teal;
+  background-color: $green;
   border-radius: 50%;
   box-shadow: 0 2px 4px rgba($dark-grey, .5);
   bottom: .5em;
