--- a/css/_cases.scss
+++ b/css/_cases.scss
@@ -11,6 +11,9 @@
     &.contain {
       width: auto;
     }
+    &.image_small {
+      max-width: 600px;
+    }
   }
   video {
     @extend %img;
@@ -29,6 +32,9 @@
     margin-top: 5em;
     h3 {
       width: 100%;
+    }
+    h5 {
+      margin-bottom: 2em;
     }
     p {
       font-size: 1.15em;
@@ -63,6 +69,12 @@
           width: 100%;
         }
       }
+    }
+    &#note {
+      font-style: italic;
+      line-height: 1.5em;
+      margin-top: 4em;
+      text-align: center;
     }
   }
   .pager {
