--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -1,9 +1,12 @@
 /* ===== hero ===== */
 %box {
-  background-color: rgba(lighten($teal, 15%), 0.5);
+  //background-color: rgba(lighten($teal, 15%), 0.5);
+  background-color: $green_medium;
 }
 
 #hero {
+	min-height: 60vh;
+	position: relative;
 	#name {
 		@include flexbox($justify-content: flex-end);
 		text-align: right;
@@ -18,8 +21,10 @@
 			line-height: 1em;
 			margin: 0;
 			position: absolute;
-			right: 200px;
-			top: 200px;
+			right: 17%;
+			@include responsiveMin(700px) {
+        right: 12%;
+      }
 			& span {
 				display: block;
 			}
@@ -34,13 +39,16 @@
 		}
 		.text {
 			font-family: $sans;
-			font-size: 2.5em;
-			line-height: 1.2em;
+			font-size: 2em;
+			line-height: 1.5em;
 			margin: 0;
 			position: absolute;
-			//left: 175px;
-			margin-left: 40px;
-			top: 475px;
+			bottom: 10%;
+			left: 6%;
+			transition: font-size .5s;
+			@include responsiveMin(700px) {
+        font-size: 2.5em;
+      }
 			& span {
 				display: block;
 			}
